current/overlays/prod/www-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    app: www
spec:
  ingressClassName: nginx
  rules:
    - host: vatusa.net
      http:
        paths:
          - backend:
              service:
                name: www-service
                port:
                  number: 80
            path: /legacy/(.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: www-service
                port:
                  number: 80
            path: /legacy
            pathType: ImplementationSpecific
    - host: www.vatusa.net
      http:
        paths:
          - backend:
              service:
                name: www-service
                port:
                  number: 80
            path: /legacy/(.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: www-service
                port:
                  number: 80
            path: /legacy
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - vatusa.net
        - www.vatusa.net
      secretName: vatusa-net-tls
